EMTest3/LetterSpacing test fixed.

--- a/pathway/Test/OpenOfficeConvert/TestFiles/input/EMTest3.css
+++ b/pathway/Test/OpenOfficeConvert/TestFiles/input/EMTest3.css
@@ -1,4 +1,5 @@
-.a {
+.entry{
 font-size: 2em;
 letter-spacing: 1em;
 }
+
